Leaderboard/rip-shot-scoreboard/frontend/src/index.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

html,
body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  overflow: hidden;
  background-color: #000;
  color: white;
}

#root {
  width: 100%;
  height: 100%;
  overflow: hidden;
}

@keyframes marquee {
  0% {
    transform: translateX(0);
  }

  100% {
    transform: translateX(-50%);
  }
}

.animate-marquee {
  animation: marquee 80s linear infinite;
}

.animate-marquee-slow {
  animation: marquee 110s linear infinite;
}

.animate-marquee-fast {
  animation: marquee 70s linear infinite;
}

.pause-on-hover:hover {
  animation-play-state: paused;
}

